# quiGLy

./: .gitignore  CMakeLists.txt  LICENSE-academic.txt  README.md  header.txt  main.cpp  sampledata.cpp  sampledata.h
commands/: ichangeable.h  itraceable.h  iuicommand.h  iuicommandqueue.h  uicommand.cpp  uicommand.h  uicommandqueue.cpp  uicommandqueue.h  uidatachangingcommand.cpp  uidatachangingcommand.h
commands/document/: changeopenglversioncommand.cpp  changeopenglversioncommand.h
commands/editor/: fixmissingblockcommand.cpp  fixmissingblockcommand.h  savedocumentcommand.cpp  savedocumentcommand.h  setdocumentcommand.cpp  setdocumentcommand.h
data/: iblock.h  iconnection.h  ipipeline.h  ipipelineitem.h  ipipelineitemprivate.h  ipipelinemanager.cpp  ipipelinemanager.h  iport.h  iproperty.h  irendercommand.h  iserializable.h  iversionable.h
data/blocks/: arraydatasourceblock.cpp  arraydatasourceblock.h  block.cpp  block.h  blocklist.cpp  blocklist.h  blocktype.h  bufferblock.cpp  bufferblock.h  cameracontrolblock.cpp  cameracontrolblock.h  codegeneratorblock.cpp  codegeneratorblock.h  connection.cpp  connection.h  connectionlist.cpp  connectionlist.h  datasourceblock.cpp  datasourceblock.h  displayblock.cpp  displayblock.h  fragmenttestsblock.cpp  fragmenttestsblock.h  framebufferobjectblock.cpp  framebufferobjectblock.h  geometrydatasourceblock.cpp  geometrydatasourceblock.h  imageloaderblock.cpp  imageloaderblock.h  meshgeneratorblock.cpp  meshgeneratorblock.h  mixerblock.cpp  mixerblock.h  modelloaderblock.cpp  modelloaderblock.h  port.cpp  port.h  portlist.cpp  portlist.h  porttype.h  (+24 more)
data/cache/: cacheableobject.cpp  cacheableobject.h  cacheobject.cpp  cacheobject.h  cachepool.cpp  cachepool.h  icacheable.h
data/common/: dataexceptions.cpp  dataexceptions.h  objectvector.h  serializationcontext.cpp  serializationcontext.h  utils.cpp  utils.h
data/pipeline/: pipeline.cpp  pipeline.h  pipelineitem.h  pipelineitemlist.h  pipelineitemstatus.h  pipelinelist.cpp  pipelinelist.h  pipelinemanager.cpp  pipelinemanager.h  pipelineobjectfactory.cpp  pipelineobjectfactory.h  pipelineproject.cpp.autosave  pipelineprojectstream.cpp  pipelineprojectstream.h
data/properties/: filenameproperty.cpp  filenameproperty.h  glsldocumentlistproperty.cpp  glsldocumentlistproperty.h  imagegridcellsproperty.cpp  imagegridcellsproperty.h  mixerlayoutproperty.cpp  mixerlayoutproperty.h  property.h  propertybase.cpp  propertybase.h  propertyid.h  propertylist.cpp  propertylist.h  propertytype.h  standardproperties.cpp  standardproperties.h  textureproperty.cpp  textureproperty.h  vaolayoutproperty.cpp  vaolayoutproperty.h  varyingsproperty.cpp  varyingsproperty.h
data/rendercommands/: clearrendercommand.cpp  clearrendercommand.h  drawrendercommand.cpp  drawrendercommand.h  rendercommand.cpp  rendercommand.h  rendercommandlist.cpp  rendercommandlist.h  rendercommandtype.h
data/types/: bufferstreamingcontext.cpp  bufferstreamingcontext.h  datasource.cpp  datasource.h  geometrydatasource.cpp  geometrydatasource.h  glsldocumentlist.cpp  glsldocumentlist.h  gltypes.cpp  gltypes.h  imagedatasource.cpp  imagedatasource.h  meshgeneratordatasource.cpp  meshgeneratordatasource.h  mixerlayout.cpp  mixerlayout.h  modeldatasource.cpp  modeldatasource.h  texturedatasource.cpp  texturedatasource.h  types.cpp  types.h  typeutils.cpp  typeutils.h  vaolayout.cpp  vaolayout.h  varyings.cpp  varyings.h
opengl/: abortrenderingevent.cpp  abortrenderingevent.h  glconfiguration.h  glcontroller.cpp  glcontroller.h  gli.h  glrenderpass.cpp  glrenderpass.h  glrenderpassset.cpp  glrenderpassset.h  glrenderview.cpp  glrenderview.h  glwrapper.cpp  glwrapper.h
opengl/evaluation/: evaluationexception.cpp  evaluationexception.h  evaluationutils.cpp  evaluationutils.h  iblockevaluator.h  iglrenderpassevaluator.h  setuprenderingevaluator.cpp  setuprenderingevaluator.h
opengl/glslparser/: glslcodeblock.cpp  glslcodeblock.h  glsldocument.cpp  glsldocument.h  glsldocumentinfo.cpp  glsldocumentinfo.h  glslindentor.cpp  glslindentor.h  glslparser.cpp  glslparser.h  glslquickfix.h  glslstatementfactory.cpp  glslstatementfactory.h  keywordreader.cpp  keywordreader.h
resource/: Code.xcf  Icon.xcf  highlight.xml  keywords.xml  opengl.qrc  quiGLy.xcf  tango.qrc
resource/notepad++/: glsltemplatesyntax.xml  ysmtemplatesyntax.xml
views/: abstractview.cpp  abstractview.h  document.cpp  document.h  iview.h  registry.cpp  registry.h  view.cpp  view.h  viewitem.cpp  viewitem.h
views/commandview/: commandview.cpp  commandview.h
views/common/: activemeshcombobox.cpp  activemeshcombobox.h  colorselect.cpp  colorselect.h  connectioncombobox.cpp  connectioncombobox.h  enumcombobox.h  fileselect.cpp  fileselect.h  swizzlebox.cpp  swizzlebox.h  vectoredit.cpp  vectoredit.h  versionselect.cpp  versionselect.h  ysmpalette.cpp  ysmpalette.h
views/glsleditorwindow/: glslcompleter.cpp  glslcompleter.h  glsleditor.cpp  glsleditor.h  glsleditortab.cpp  glsleditortab.h  glslhighlighter.cpp  glslhighlighter.h  glsllinebar.cpp  glsllinebar.h  glsllinebarblock.cpp  glsllinebarblock.h  glsltextedit.cpp  glsltextedit.h  iglslcompleterdelegate.h  iglsllinebardelegate.h
views/logview/: logview.cpp  logview.h
views/mainwindow/: documentmanager.cpp  documentmanager.h  maindelegate.cpp  maindelegate.h  mainmenu.cpp  mainmenu.h  maintoolbar.cpp  maintoolbar.h  mainwindow.cpp  mainwindow.h  rendermanager.cpp  rendermanager.h  viewmanager.cpp  viewmanager.h
views/pipelineview/: blueprintconnection.cpp  blueprintconnection.h  pipelineconnection.h  pipelinescene.cpp  pipelinescene.h  pipelinescenelayouter.cpp  pipelinescenelayouter.h  pipelinetab.cpp  pipelinetab.h  pipelineview.cpp  pipelineview.h
views/propertyview/: bufferpropertyview.cpp  bufferpropertyview.h  clearcommandpropertyview.cpp  clearcommandpropertyview.h  fragmenttestspropertyview.cpp  fragmenttestspropertyview.h  imageloaderpropertyview.cpp  imageloaderpropertyview.h  meshgeneratorpropertyview.cpp  meshgeneratorpropertyview.h  mixerpropertyview.cpp  mixerpropertyview.h  (+26 more)
(+424 files in other folders)
